@@ -1,6 +1,8 @@
 2.2 - ?
 	- Additional custom CSS field to user profile
 	- Search dropdown calls the return function automatically on select
+	- Revised the media list
+	- Added a checkbox to releases to indicate a patch
 
 2.1 - 2008-12-29
 	- Skin support
